# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updater/updater_default_cfg.gni")
import("//build/ohos.gni")
SUBSYSTEM_DIR = "//base/update/updater/services/ptable_parse"

config("updater_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "../../services/include",
    "../../utils/include",
    "../../utils/json",
    "//third_party/bounds_checking_function/include",
    "//drivers/hdf/frameworks/include/utils",
    "../../interfaces/kits/include/",
    "../../services/include/script",
    "../../services/include/package",
    "../../services/include/applypatch",
    "../../services/include/log",
  ]
}

ohos_static_library("libptableparse") {
  sources = [
    "./ptable.cpp",
    "./ptable_manager.cpp",
    "./ptable_process.cpp",
    "./ufs_ptable.cpp",
  ]
  configs = [ ":updater_config" ]

  ldflags = [ "-Wl -std=c++11" ]

  deps = [
    "../../services/log:libupdaterlog",
    "../../utils:libutils",
    "//third_party/bzip2:libbz2",
    "//third_party/cJSON:cjson",
    "//third_party/zlib:libz",
  ]

  part_name = "updater"
  subsystem_name = "updater"
}
