# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updater/updater_default_cfg.gni")
import("//build/ohos.gni")

updater_path = rebase_path("${updater_absolutely_path}", ".")

ohos_static_library("libsdupdate") {
  sources = [ "sdcard_update.cpp" ]

  include_dirs = [
    "${updater_path}/interfaces/kits/include",
    "${updater_path}/services",
    "${updater_path}/services/common",
    "${updater_path}/services/include",
    "${updater_path}/services/ui",
    "${updater_path}/services/ui/include",
    "${updater_path}/utils/include",
    "//third_party/bounds_checking_function/include",
  ]

  deps = [
    "${updater_path}/utils:libutils",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  external_deps = [ "init:libbegetutil" ]

  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = true
  }

  subsystem_name = "updater"
  part_name = "updater"
}
